--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:postgresql://localhost/sncf
 spring.datasource.username=postgres
